src/test/deca/codegen/invalid/test_div_overflow_positif.deca
// Description :
//    Test de la division par un très petit nombre positif
//
// Resultats:
//    Erreur : Débordement floattant
{
    println (4/4.0E-40);
}